--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <section id="howtopay" class="content-section responsive-width">
              <h2>How will we pay for this?</h2>
 
-             <p>Solving every major crisis we are facing will cost money. We need to build more hospitals and aged care, create more emergency departments, hire police support officers, expand the Pharmaceutical Benefits Scheme to include non-Pharmaceutical essentials, and more, all detailed below. Luckily we have big corporations operating major export industries from South Australia with large profit margins that can afford to pay. You can read more about this in Policy 3.0 and in the article "Paying for good policy" underneath the policy section.</p>
+             <p>Solving every major crisis we are facing will cost money. We need to build more hospitals and aged care, create more emergency departments, hire police support officers, expand the Pharmaceutical Benefits Scheme to include non-pharmaceutical essentials, and more, all detailed below. Luckily we have big corporations operating major export industries from South Australia with large profit margins that can afford to pay. You can read more about this in Policy 3.0 and in the article "Paying for good policy" underneath the policy section.</p>
         </section>
 
         <section id="policy" class="content-section responsive-width">
@@ -228,7 +228,7 @@
              <p>My policies will prevent this from inflating housing prices further for three reasons:</p>
               <ul>
                <li>Firstly, the HECS-style loan will only be exactly the size necessary to allow the buyer to make up the difference in their buying power to a fair price, and only the prospective buyer with the greatest moral right to purchase will get access to this loan.</li>
-               <li>Secondly, due to Policy 5a above, the property investor will be incentivised to sell to the rightful owner at this target price, rather than sell to someone else. The Quality of Life Commission will adjust such charges on property investors by whatever amount needed to achieve a sale at a fair price.</li>
+               <li>Secondly, due to Policy 6.1 above, the property investor will be incentivised to sell to the rightful owner at this target price, rather than sell to someone else. The Quality of Life Commission will adjust such charges on property investors by whatever amount needed to achieve a sale at a fair price.</li>
               </ul>
 
              <!-- <h4>Housing price growth limit</h4>
@@ -283,8 +283,8 @@
 
              <p>To improve quality of life and reduce the burden on our hospital system we can:</p>
              <ul>
-              <li>9a. Build government-owned aged care centres to ensure adequate supply of high quality care at affordable prices</li>
-              <li>9b. Fund a program of roving nurses to provide urgent care in people's homes</li>
+              <li>10.1 Build government-owned aged care centres to ensure adequate supply of high quality care at affordable prices</li>
+              <li>10.2 Fund a program of roving nurses to provide urgent care in people's homes</li>
              </ul>
 
              <p>The Quality of Life Commission will pay for the above with measures such as Policy 3.0 above.</p>
@@ -316,21 +316,21 @@
               <p>Provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
 
              <h3>Pollution, traffic congestion and the algae crisis
-              <br>
-               (13.0_Algae_Solution)
              </h3>
 
-              <h4>13.0 Solve the algae crisis, and the pollution crises that are causing it</h4>
+              <h4>Solve the algae crisis, and the pollution crises that are causing it
+              <br>
+               (13.0_Algae_Solution)</h4>
 
               <p><!-- Tax exports that are contributing to the crisis. Use this money to help businesses reduce their pollution and reduce pollution caused by the government. While we can't solve the climate crisis by ourselves, we can do much more to tackle the pollution crises here in South Australia, and have an influence on the rest of the country, and thereby on the rest of the world. --> I am working on a video explaining this policy in more detail, which I plan to release by December 18 at the latest.</p>
 
-              <h4>14.0 Reduce traffic congestion, air pollution and atmospheric pollution
+              <h4>Reduce traffic congestion, air pollution and atmospheric pollution
               <br>
                (14.0_Clean_Air)</h4>
 
               <p>Reduce traffic congestion and pollution with much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
 
-              <h4>15.0 Improve the Belair train line
+              <h4>Improve the Belair train line
               <br>
                (15.0_Belair_Train)</h4>
 
@@ -348,11 +348,12 @@
               <br>
                (17.0_Democratise)</h4>
 
-              <p>Deliver integrity in politics, transparency and accountability in government and a stronger democracy, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations. My plan for this will later be published in detail, but the plan starts with supporting the movement for more independent politicians in this country. In the meantime, there are some reforms that ideally should be implemented immediately, even prior to the coming election in March 2026.</p>
+              <p>Deliver integrity in politics, transparency and accountability in government and a stronger democracy, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations. My plan for this will later be published in detail, but the plan starts with supporting the movement for more independent politicians in this country. In the meantime, there are some reforms that ideally should be implemented immediately, even prior to the coming election in March 2026:</p>
               <ul>
-               <li>Tighten the cap on candidate spending. Although political donations have been banned, wealthy candidates can still spend up to $100 000 on their campaign under current laws, while other candidates may not be able to afford spending even $10 000. This creates an unfair disadvantage for less wealthy candidates, and even some of the wealthier candidates might prefer to spend less than $100 000 on the condition that none of their opponents is spending more than they are. The statewide cap should be lowered to around $10 000 per candidate.</li>
-               <li>Ban political campaigning at polling booths. It's annoying, and it creates further bias towards candidates with more resources.</li>
-               <li>Hold council elections on the same day as state elections in order to increase council voting and thereby increase accountability of local councils. Allow candidates to run for multiple positions (but not multiple wards/electorates), such as mayor and MP, but only accept one of the positions if they win more than one. Due to our preferential voting system, votes can easily be redistributed if a candidate wins more than one position and has to turn one down.</li>
+               <li>17.1 Tighten the cap on candidate spending. Although political donations have been banned, wealthy candidates can still spend up to $100 000 on their campaign under current laws, while other candidates may not be able to afford spending even $10 000. This creates an unfair disadvantage for less wealthy candidates, and even some of the wealthier candidates might prefer to spend less than $100 000 on the condition that none of their opponents is spending more than they are. The statewide cap should be lowered to around $10 000 per candidate.</li>
+               <li>17.2 Ban political campaigning at polling booths. It's annoying, and it creates further bias towards candidates with more resources.</li>
+               <li>17.3 Hold council elections on the same day as state elections in order to increase council voting and thereby increase accountability of local councils. Allow candidates to run for multiple positions (but not multiple wards/electorates), such as mayor and MP, but only accept one of the positions if they win more than one. Due to our preferential voting system, votes can easily be redistributed if a candidate wins more than one position and has to turn one down.</li>
+               <li>17.4 End the requirement for political candiates to put an exact address on their political materials. This is unfair on candidates who don't have an office, since they currently would have to put their exact home address on all materials including on the internet. PO Boxes aren't currently allowed as the address, and even this probably shouldn't be a requirement in the days of the internet and email. In situations where it's obvious who authorised the content, eg. it is posted on an official account online, the "Authorised by" message should not be required at all.</li>
               </ul>
 
               <p>The job of a politician in our lower house is to serve and represent their electorate. The most important aspect of this is to pursue and prioritise policies that align with the agenda of the electorate, and not to pursue any other agenda. None of our major political parties recognise this as the foundational principle of their constitution, and for at least the last 80 years or so, it seems that political parties have prevented the accountability of politicians to their electorate more than they have held politicians accountable. Getting more independents into parliament is the first step towards solving this problem, especially independents who are committed to their democratic duties to their electorate.</p>
@@ -453,7 +454,7 @@
                     </a>
                 </div>
               
-              <p>Additional policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself. If you're interested in a face to face meeting or a phone call, please email me about that too.</p>
+              <p>Additional policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself. If you're interested in a face-to-face meeting or a phone call, please email me about that too.</p>
 
             <p class="contact-email">
                 <strong>Email:</strong> <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>
