--- a/index.html
+++ b/index.html
@@ -382,7 +382,11 @@
 
               <p>Fund science, science integrity and science communication when it comes to the environmental causes of mental illness and violence, and develop science-based policy to address the causes of mental illness and violence. The science on the causes of mental illness and violence is inadequate, and the good science that has been done has not been adequately communicated to the public, who are exposed to simplistic and incorrect narratives about the causes of mental illness and violence, some of which increase conflict and hatred and lead to more violence.</p>
 
-             <article>
+             </section>
+
+             <section id="essays" class="content-section responsive-width">
+              <h2>Essays</h2>
+             <article id="payingforgoodpolicy">
               <h3>Paying for good policy</h3>
 
               <p>
@@ -407,7 +411,7 @@
               </p>
              </article>
 
-             <article>
+             <article id="underemployment">
               <h3>More details on the underemployment crisis</h3>
               <p>
                The official unemployment rate for South Australia in October 2025 was 4.5% and the partial underemployment rate was 6.3%, for a total official underutilisation rate of 10.8%. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use. This means that the true underemployment or underutilisation rate, in the broader sense, may be well over 20%. Unlike the piecemeal plans of our political parties, my plan outlined above will fully resolve this issue if well-implemented, especially Policies 6 and 7.
@@ -417,7 +421,7 @@
               </p>
               <p>For a deeper discussion of the related underpayment crisis, and my creative writing, see <a href="https://alecgargett.github.io/alecgargett-space">my old artist website</a>.</p>
              </article>
-             <article>
+             <article id="violence">
               <h3>The harder problem of global injustice and violence.</h3>
               <p>Although I am confident that we can solve most of our crises listed above locally, there are global problems that are much harder to solve, like the problems of global pollution, war and unjust violence. I'll do what I can to come up with a solution, and support others working on a solution. I am confident that we can show leadership to the rest of the world through our actions to address our own problems here in South Australia, and that this will put us in a position to have a better influence on world affairs.
              </p>
@@ -435,11 +439,11 @@
         </section> --> <!-- about -->
 
         <section id="contact" class="content-section responsive-width">
-             <h2>Explaining my policies and my strategy in more detail</h2>
+             <h3>Explaining my policies and my strategy in more detail</h3>
 
               <p>My policies will be explained in more detail here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
 
-              <h3 style="text-align: center;">Follow me and see upcoming videos about my plan:</h3>
+              <h4 style="text-align: center;">Follow me and see upcoming videos about my plan:</h4>
             <div class="social-links">
                     <a href="https://www.facebook.com/profile.php?id=61582618821078" target="_blank" rel="noopener noreferrer" aria-label="Follow Alec on Facebook">
                         <svg viewBox="0 0 24 24" role="img" aria-hidden="true"><path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/></svg>
