--- a/index.html
+++ b/index.html
@@ -779,7 +779,8 @@ body.light-theme .site-header {
     box-shadow: var(--box-shadow);
 }
 body.dark-theme .content-section p,
-body.dark-theme .content-section li {
+body.dark-theme .content-section li,
+body.dark-theme .content-section h4 {
     background-color: rgb(0, 0, 0);
     padding: 1rem;
     border-radius: 5px;
