--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 
              <h3>A warning to interfering corporations and criminals</h3>
 
-             <h4>Eliminate and punish harmful corporate interference in our elections and our parliament <br>
-             (1.0_Corporate_Interference)
-             </h4>
+             <h4>Eliminate and punish harmful corporate interference in our elections and our parliament</h4>
+              <h5>(1.0_Corporate_Interference)
+             </h5>
 
              <p>Corporations often interfere in elections and in parliament to prevent policies that would benefit most people but reduce their profits. Some of these businesses, including at least some casinos, have ties to criminals and money laundering. Although political donations have been banned in South Australia, there are other legal and illegal means that they may attempt to use to influence elections. To prevent this we need to:</p>
              <ul>
@@ -174,9 +174,9 @@
              <h3>Quality of life and cost of essentials</h3>
 
              <h4>Create a Quality of Life Commission
-              <br>
-              (2.0_QLC)
              </h4>
+              <h5> (2.0_QLC)
+             </h5>
 
              <p>Solve the cost of living crisis and the quality of life crisis, by creating a Cost of Living and Quality of Life Commission, which I will refer to here simply as the Quality of Life Commission. Give the Quality of Life Commission the power to:</p>
              <ul>
@@ -190,21 +190,21 @@
              <p>This Commission will greatly increase the speed and efficiency with which we can address the quality of life crisis, compared to relying exclusively on the slow processes of a parliament that lacks the expertise for technical matters. It also means that parliament can direct the Quality of Life Commission to implement policies that require ongoing regulatory involvement such as the following:</p>
 
              <h4>Stop giving our resource wealth away (almost) for free
-              <br>
-             (3.0_Resource_Pricing)</h4>
+             </h4>
+              <h5>(3.0_Resource_Pricing)</h5>
 
              <p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. The Quality of Life Commission will charge whatever rate maximises benefits for South Australians, which will fund not only the Commission itself but all of the other policies below, including cost of living measures. Other environmentally costly international export industries may also be charged for those exports, where the Commission regards these charges as necessary to fund necessary policies, or otherwise beneficial to quality of life in Australia.</p>
 
              <h4>Provide cheap electricity and cheap healthy foods 
-              <br>
-              (4.0_Cheap_Essentials)</h4>
+             </h4>
+              <h5> (4.0_Cheap_Essentials)</h5>
 
              <p>Reduce prices on essentials like electricity, and healthy foods for South Australians through regulation and compensation. In a similar manner to the Pharmaceutical Benefits Scheme, the Quality of Life Commission will regulate to reduce the price of these essentials for South Australians, and compensate only the amount needed to ensure adequate supply and good quality. Reducing the cost of electricity will help to reduce pollution, by helping people switch from polluting gas and wood burning to electricity. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
 
              <h4>Provide HECS-style loans for efficiency upgrades 
-              <br>
-              (5.0_Efficiency_Loans)
              </h4>
+              <h5> (5.0_Efficiency_Loans)
+             </h5>
 
              <p>Provide HECS-style loans for purchases that reduce costs and increase efficiency such as switching to electric heating, solar water heating, or repainting a dark roof to a heat-reflecting white. This will be designed to avoid causing increases in prices, and even reduce prices, by providing only enough to make the difference up to a target price.</p>
 
@@ -213,16 +213,16 @@
              <p>We've all heard stories of long-term renters being kicked out of their home where they'd been living for years or decades, just so that the property can be sold to someone with more money. Most of us recognise this as an injustice, and it also incentivises investors owning a huge number of investment properties. To solve this we can:</p>
 
              <h4>Charge landlords if they don't rent or sell to the rightful resident
-              <br>
-              (6.1_Right_To_Reside)
              </h4>
+              <h5> (6.1_Right_To_Reside)
+             </h5>
 
              <p>Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be used by the person or family with the greatest moral right to the property. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this, and will determine the rate of these variable charges to ensure a fair price.</p>
 
              <h4>Provide HECS-style loans to assist the rightful resident at a regulated price
-              <br>
-              (6.2_Rightful_Resident_Loans)
              </h4>
+              <h5> (6.2_Rightful_Resident_Loans)
+             </h5>
 
              <p>Once the above policies are implemented, we can assist all long-term renters to buy their residence, and keep family homes in the family where desired, by allowing HECS-style loans for the buyer.</p>
              <p>My policies will prevent this from inflating housing prices further for three reasons:</p>
@@ -238,15 +238,15 @@
              <h3>Underemployment and immigration</h3>
 
              <h4>Create a South Australian government employment service
-              <br>
-              (7.0 SAEC)
              </h4>
+              <h5> (7.0_SAEC)
+             </h5>
 
              <p>Provide government-supported apprenticeships and job placements for all unemployed and underemployed Australians who want them by creating a South Australian government employment service. Expert in the field, David O'Halloran, PhD, recommends creating government employment services at the state level rather than at the federal level. Currently we have neither. The existing private services are inadequate. With the support of the funding from the Quality of Life Commission's charges, the South Australian government employment service will ensure that everyone has the support they need to do the work that will most benefit South Australians, and that businesses that need support to help with this will be given that support.</p>
 
              <h4>Maintain the refugee intake but reduce net immigration
-              <br>
-              (8.0_Reduce_Immigration)
+             </h4>
+              <h5> (8.0_Reduce_Immigration)
              </h4>
 
              <p>During the Covid border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short-term effects. In the long-term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
@@ -267,8 +267,8 @@
              </ul>
 
              <h4>Build housing the right way
-              <br>
-              (9.0_Better_Housing)
+             </h4>
+              <h5> (9.0_Better_Housing)
              </h4>
 
              <p>The above policies may be enough to solve the housing affordability crisis, but we also need to improve the quality of housing that people can afford by building the right type of high-quality housing in the right locations, instead of destroying the beauty of our existing suburbs and wasting land on the outskirts with a lack of proper planning. With all of the above policies, we won't need to sacrifice our quality of life to reduce the cost of living any longer. We can replace ugly buildings with beautiful ones, instead of replacing beautiful buildings and gardens with ugly ones, and we can plan new land releases better to use the land more efficiently with higher quality housing with a wide variety of densities, along with adequate space for new hospitals and other necessary amenities and infrastructure.</p>
@@ -277,8 +277,8 @@
              </h3>
 
              <h4>Provide abundant, high quality aged care and at-home urgent care
-              <br>
-              (10.0_Better_Care)
+             </h4>
+              <h5> (10.0_Better_Care)
              </h4>
 
              <p>To improve quality of life and reduce the burden on our hospital system we can:</p>
@@ -290,8 +290,8 @@
              <p>The Quality of Life Commission will pay for the above with measures such as Policy 3.0 above.</p>
 
              <h4>Increase the number of hospitals, emergency departments and staff. Reopen the Blackwood Hospital and the Repat emergency department
-              <br>
-              (11.0_More_EDs)
+             </h4>
+              <h5> (11.0_More_EDs)
              </h4>
 
              <p>Increase not only the size of emergency departments and hospitals, but also the number of them, the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
@@ -309,8 +309,8 @@
              <h3>Policing</h3>
 
               <h4>Solve the police staffing crisis
-               <br>
-               (12.0_Police_Support)
+              </h4>
+              <h5>  (12.0_Police_Support)
               </h4>
 
               <p>Provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
@@ -318,15 +318,13 @@
              <h3>Pollution, traffic congestion and the algae crisis
              </h3>
 
-              <h4>Solve the algae crisis, and the pollution crises that are causing it
-              <br>
-               (13.0_Algae_Solution)</h4>
+              <h4>Solve the algae crisis, and the pollution crises that are causing it</h4>
+              <h5>(13.0_Algae_Solution)</h4>
 
               <p><!-- Tax exports that are contributing to the crisis. Use this money to help businesses reduce their pollution and reduce pollution caused by the government. While we can't solve the climate crisis by ourselves, we can do much more to tackle the pollution crises here in South Australia, and have an influence on the rest of the country, and thereby on the rest of the world. --> I am working on a video explaining this policy in more detail, which I plan to release by December 18 at the latest.</p>
 
-              <h4>Reduce traffic congestion, air pollution and atmospheric pollution
-              <br>
-               (14.0_Clean_Air)</h4>
+              <h4>Reduce traffic congestion, air pollution and atmospheric pollution</h4>
+              <h5>(14.0_Clean_Air)</h4>
 
               <p>14.1 Reduce traffic congestion and pollution with much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
 
@@ -334,23 +332,20 @@
 
               <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas emissions, so it is essential that South Australia demonstrate to the whole world how to eliminate pollution in these sectors in a way that provides maximum benefit to the state.</p>
 
-              <h4>Improve the Belair train line
-              <br>
-               (15.0_Belair_Train)</h4>
+              <h4>Improve the Belair train line</h4>
+              <h5>(15.0_Belair_Train)</h4>
 
               <p>Currently trains going in opposite directions share the same track on the Belair line, and have to wait for each other to pass. Reduce this issue by duplicating the track wherever feasible. Once these works are done, electrify the line. Once these upgrades are complete, expand the Belair train line to Mount Barker.</p>
 
-              <h4>Make environmentally friendly choices more affordable
-              <br>
-               (16.0_Affordable_Options)</h4>
+              <h4>Make environmentally friendly choices more affordable</h4>
+              <h5>(16.0_Affordable_Options)</h4>
 
               <p>The Quality of Life Commission will be charged with finding other ways to reduce pollution by making environmentally friendly choices more affordable.</p>
 
              <h3>Corruption</h3>
 
-              <h4>Make our system more democratic
-              <br>
-               (17.0_Democratise)</h4>
+              <h4>Make our system more democratic</h4>
+              <h5>(17.0_Democratise)</h4>
 
               <p>Deliver integrity in politics, transparency and accountability in government and a stronger democracy, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations. My plan for this will later be published in detail, but the plan starts with supporting the movement for more independent politicians in this country. In the meantime, there are some reforms that ideally should be implemented immediately, even prior to the coming election in March 2026:</p>
               <ul>
@@ -364,21 +359,18 @@
 
               <h3>Public wellbeing</h3>
 
-              <h4>18.0 Prevent harm from advertising
-              <br>
-               (18.0_Prevent_Harm)</h4>
+              <h4>18.0 Prevent harm from advertising</h4>
+              <h5>(18.0_Prevent_Harm)</h4>
 
               <p>Give both SA Health and the EPA the power to regulate against harmful advertising, such as gambling ads or alcohol ads, especially when children may be present, and to regulate product packaging to better inform consumers about products.</p>
 
-              <h4>19.0 Free sport and healthy activity classes
-              <br>
-               (19.0_Free_Sport)</h4>
+              <h4>19.0 Free sport and healthy activity classes</h4>
+              <h5>(19.0_Free_Sport)</h4>
 
               <p>Provide sporting clubs and similar clubs with the funding to provide South Australians with at least one free group lesson per year. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
 
-              <h4>20.0 Address the environmental causes of mental illness and violence
-              <br>
-               (20.0_Environmental_Health)</h4>
+              <h4>20.0 Address the environmental causes of mental illness and violence</h4>
+              <h5>(20.0_Environmental_Health)</h5>
 
               <p>Fund science, science integrity and science communication when it comes to the environmental causes of mental illness and violence, and develop science-based policy to address the causes of mental illness and violence. The science on the causes of mental illness and violence is inadequate, and the good science that has been done has not been adequately communicated to the public, who are exposed to simplistic and incorrect narratives about the causes of mental illness and violence, some of which increase conflict and hatred and lead to more violence.</p>
 
@@ -601,6 +593,8 @@ h1, h2, h3 {
 h1 { font-size: 3rem; margin-bottom: 0.5rem; }
 h2 { font-size: 2.25rem; margin-top: 2.5rem; margin-bottom: 1.5rem; border-bottom: 2px solid var(--color-secondary); padding-bottom: 0.5rem;}
 h3 { font-size: 1.5rem; margin-top: 2rem; }
+h4 { font-size: 1.2rem; margin-top: 0rem; margin-bottom: 0rem; }
+h5 { font-size: 1.0rem; margin-top: 0rem; margin-bottom: 0rem; }
 
 p { margin-bottom: 1rem; }
 
@@ -779,8 +773,7 @@ body.light-theme .site-header {
     box-shadow: var(--box-shadow);
 }
 body.dark-theme .content-section p,
-body.dark-theme .content-section li,
-body.dark-theme .content-section h4 {
+body.dark-theme .content-section li {
     background-color: rgb(0, 0, 0);
     padding: 1rem;
     border-radius: 5px;
