--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
               
              <p>This Commission will greatly increase the speed and efficiency with which we can address the quality of life crisis, compared to relying exclusively on the slow processes of a parliament that lacks the expertise for technical matters. It also means that parliament can direct the Quality of Life Commission to implement policies that require ongoing regulatory involvement such as the following:</p>
 
-             <h4>Stop giving our resource wealth away (almost) for free
+             <h4>Sell stop giving our resource wealth away (almost) for free
              </h4>
               <h5>(3.0_Resource_Pricing)</h5>
 
-             <p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. The Quality of Life Commission will charge whatever rate maximises benefits for South Australians, which will fund not only the Commission itself but all of the other policies below, including cost of living measures. Other environmentally costly international export industries may also be charged for those exports, where the Commission regards these charges as necessary to fund necessary policies, or otherwise beneficial to quality of life in Australia.</p>
+             <p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. Ideally, the Quality of Life Commission would directly charge whatever price maximises benefits for South Australians, but this would require constitutional reform. Until then, the Quality of Life Commission will instead recommend minimum resource prices to parliament, which will then use that as the reserve price when selling the resources at auction. These resource sales will fund not only the Commission itself but all of the other policies below, including cost of living measures. Other environmentally costly international export industries may also be charged for those exports, where the Commission regards these charges as necessary to fund necessary policies, or otherwise beneficial to quality of life in Australia.</p>
 
              <h4>Provide cheap electricity and cheap healthy foods 
              </h4>
@@ -357,22 +357,27 @@
 
               <p>The job of a politician in our lower house is to serve and represent their electorate. The most important aspect of this is to pursue and prioritise policies that align with the agenda of the electorate, and not to pursue any other agenda. None of our major political parties recognise this as the foundational principle of their constitution, and for at least the last 80 years or so, it seems that political parties have prevented the accountability of politicians to their electorate more than they have held politicians accountable. Getting more independents into parliament is the first step towards solving this problem, especially independents who are committed to their democratic duties to their electorate.</p>
 
+              <h4>Keep South Australian land in South Australian hands</h4>
+              <h5>(18.0_Reclaim_Land)</h4>
+              
+              <p>The largest ranch in the world, Anna Creek Station in South Australia, belongs to Gina Rinehart and a Chinese Corporation. South Australian land and property should, by law, belong entirely to South Australian permanent residents, past permanent residents and soon-to-be permanent residents, except where it belongs to the federal government.</p>
+
               <h3>Public wellbeing</h3>
 
-              <h4>18.0 Prevent harm from advertising</h4>
-              <h5>(18.0_Prevent_Harm)</h4>
+              <h4>Address the environmental causes of mental illness and violence</h4>
+              <h5>(19.0_Environmental_Health)</h5>
+
+              <p>Fund science, science integrity and science communication when it comes to the environmental causes of mental illness and violence, and develop science-based policy to address the causes of mental illness and violence. The science on the causes of mental illness and violence is inadequate, and the good science that has been done has not been adequately communicated to the public, who are exposed to simplistic and incorrect narratives about the causes of mental illness and violence, some of which increase conflict and hatred and lead to more violence.</p>
+
+              <h4>Prevent harm from advertising</h4>
+              <h5>(19.1_Prevent_Harm)</h4>
 
               <p>Give both SA Health and the EPA the power to regulate against harmful advertising, such as gambling ads or alcohol ads, especially when children may be present, and to regulate product packaging to better inform consumers about products.</p>
 
               <h4>19.0 Free sport and healthy activity classes</h4>
-              <h5>(19.0_Free_Sport)</h4>
+              <h5>(19.2_Free_Sport)</h4>
 
-              <p>Provide sporting clubs and similar clubs with the funding to provide South Australians with at least one free group lesson per year. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
-
-              <h4>20.0 Address the environmental causes of mental illness and violence</h4>
-              <h5>(20.0_Environmental_Health)</h5>
-
-              <p>Fund science, science integrity and science communication when it comes to the environmental causes of mental illness and violence, and develop science-based policy to address the causes of mental illness and violence. The science on the causes of mental illness and violence is inadequate, and the good science that has been done has not been adequately communicated to the public, who are exposed to simplistic and incorrect narratives about the causes of mental illness and violence, some of which increase conflict and hatred and lead to more violence.</p>
+              <p>Provide sporting clubs and similar clubs and health education services with the funding to provide South Australians with at least one free group lesson per year. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
 
              </section>
 
