--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
               <h4>Keep South Australian land in South Australian hands</h4>
               <h5>(18.0_Reclaim_Land)</h4>
               
-              <p>The largest ranch in the world, Anna Creek Station in South Australia, belongs to Gina Rinehart and a Chinese Corporation. South Australian land and property should, by law, belong entirely to South Australian permanent residents, past permanent residents and soon-to-be permanent residents, except where it belongs to the federal government.</p>
+              <p>The largest ranch in the world, Anna Creek Station in South Australia, belongs to Gina Rinehart and a Chinese corporation. South Australian land and property should, by law, belong entirely to South Australian permanent residents, past permanent residents and soon-to-be permanent residents, except where it belongs to the federal government.</p>
 
               <h3>Public wellbeing</h3>
 
@@ -374,7 +374,7 @@
 
               <p>Give both SA Health and the EPA the power to regulate against harmful advertising, such as gambling ads or alcohol ads, especially when children may be present, and to regulate product packaging to better inform consumers about products.</p>
 
-              <h4>19.0 Free sport and healthy activity classes</h4>
+              <h4>Free sport and healthy activity classes</h4>
               <h5>(19.2_Free_Sport)</h4>
 
               <p>Provide sporting clubs and similar clubs and health education services with the funding to provide South Australians with at least one free group lesson per year. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
