--- a/index.html
+++ b/index.html
@@ -379,6 +379,11 @@
 
               <p>Provide sporting clubs and similar clubs and health education services with the funding to provide South Australians with at least one free group lesson per year. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
 
+              <h4>More diet soft drink than regular soft drink</h4>
+              <h5>(19.3_Free_Sport)</h4>
+
+              <p>Require all venues and vending machines selling soft drink to sell more diet soft drink options than regular soft drink options.</p>
+
              </section>
 
              <section id="essays" class="content-section responsive-width">
