--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               
              <p>This Commission will greatly increase the speed and efficiency with which we can address the quality of life crisis, compared to relying exclusively on the slow processes of a parliament that lacks the expertise for technical matters. It also means that parliament can direct the Quality of Life Commission to implement policies that require ongoing regulatory involvement such as the following:</p>
 
-             <h4>Sell stop giving our resource wealth away (almost) for free
+             <h4>Stop giving our resource wealth away (almost) for free
              </h4>
               <h5>(3.0_Resource_Pricing)</h5>
 
