--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
              </h5>
 
              <p>Once the above policies are implemented, we can assist all long-term renters to buy their residence, and keep family homes in the family where desired, by allowing HECS-style loans for the buyer.</p>
-             <p>My policies will prevent this from inflating housing prices further for three reasons:</p>
+             <p>My policies will prevent this from inflating housing prices further for two reasons:</p>
               <ul>
                <li>Firstly, the HECS-style loan will only be exactly the size necessary to allow the buyer to make up the difference in their buying power to a fair price, and only the prospective buyer with the greatest moral right to purchase will get access to this loan.</li>
                <li>Secondly, due to Policy 6.1 above, the property investor will be incentivised to sell to the rightful owner at this target price, rather than sell to someone else. The Quality of Life Commission will adjust such charges on property investors by whatever amount needed to achieve a sale at a fair price.</li>
