--- a/index.html
+++ b/index.html
@@ -326,9 +326,13 @@
               <h4>Reduce traffic congestion, air pollution and atmospheric pollution</h4>
               <h5>(14.0_Clean_Air)</h4>
 
-              <p>14.1 Reduce traffic congestion and pollution with much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
+              <p>14.1 Reduce all major pollutants by over 50% by 2030, aiming for at least 75% total reduction in CO<sub>2</sub>e in both GWP20 and GWP100. Major atmospheric pollutants in South Australia are CO<sub>2</sub>, methane, N<sub>2</sub>O, NO<sub>2</sub>, and particulate matter including black carbon.</p>
 
-              <p>14.2 Reduce agricultural emissions by taxing the export of farmed animal products according to the total pollution created.</p>
+              <p>14.2 Provide much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
+
+              <p>14.3 Reduce agricultural emissions by taxing the export of farmed animal products according to the total pollution created.</p>
+
+              <p>14.4 Reduce agricultural emissions by taxing the export of agricultural products according to the total pollution created.</p>
 
               <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas emissions, so it is essential that South Australia demonstrate to the whole world how to eliminate pollution in these sectors in a way that provides maximum benefit to the state.</p>
 
