--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
              <h4>Maintain the refugee intake but reduce net immigration
              </h4>
               <h5> (8.0_Reduce_Immigration)
-             </h4>
+             </h5>
 
              <p>During the Covid border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short-term effects. In the long-term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
 
@@ -279,7 +279,7 @@
              <h4>Provide abundant, high quality aged care and at-home urgent care
              </h4>
               <h5> (10.0_Better_Care)
-             </h4>
+             </h5>
 
              <p>To improve quality of life and reduce the burden on our hospital system we can:</p>
              <ul>
@@ -292,7 +292,7 @@
              <h4>Increase the number of hospitals, emergency departments and staff. Reopen the Blackwood Hospital and the Repat emergency department
              </h4>
               <h5> (11.0_More_EDs)
-             </h4>
+             </h5>
 
              <p>Increase not only the size of emergency departments and hospitals, but also the number of them, the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
              
@@ -311,7 +311,7 @@
               <h4>Solve the police staffing crisis
               </h4>
               <h5>  (12.0_Police_Support)
-              </h4>
+              </h5>
 
               <p>Provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
 
@@ -324,9 +324,9 @@
               <p><!-- Tax exports that are contributing to the crisis. Use this money to help businesses reduce their pollution and reduce pollution caused by the government. While we can't solve the climate crisis by ourselves, we can do much more to tackle the pollution crises here in South Australia, and have an influence on the rest of the country, and thereby on the rest of the world. --> I am working on a video explaining this policy in more detail, which I plan to release by December 18 at the latest.</p>
 
               <h4>Reduce traffic congestion, air pollution and atmospheric pollution</h4>
-              <h5>(14.0_Clean_Air)</h4>
+              <h5>(14.0_Clean_Air)</h5>
 
-              <p>14.1 Reduce all major pollutants by over 50% by 2030, aiming for at least 75% total reduction in CO<sub>2</sub>e in both GWP20 and GWP100. Major atmospheric pollutants in South Australia are CO<sub>2</sub>, methane, N<sub>2</sub>O, NO<sub>2</sub>, and particulate matter including black carbon.</p>
+              <p>14.1 Reduce all major pollutants by over 50% by 2030, aiming for at least 75% total reduction in CO<sub>2</sub>e in both GWP20 and GWP100. Major atmospheric pollutants in South Australia are carbon dioxide (CO<sub>2</sub>), methane, nitrous oxide (N<sub>2</sub>O), nitrogen dioxide (NO<sub>2</sub>), and particulate matter including black carbon.</p>
 
               <p>14.2 Provide much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
 
@@ -337,19 +337,19 @@
               <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas emissions, so it is essential that South Australia demonstrate to the whole world how to eliminate pollution in these sectors in a way that provides maximum benefit to the state.</p>
 
               <h4>Improve the Belair train line</h4>
-              <h5>(15.0_Belair_Train)</h4>
+              <h5>(15.0_Belair_Train)</h5>
 
               <p>Currently trains going in opposite directions share the same track on the Belair line, and have to wait for each other to pass. Reduce this issue by duplicating the track wherever feasible. Once these works are done, electrify the line. Once these upgrades are complete, expand the Belair train line to Mount Barker.</p>
 
               <h4>Make environmentally friendly choices more affordable</h4>
-              <h5>(16.0_Affordable_Options)</h4>
+              <h5>(16.0_Affordable_Options)</h5>
 
               <p>The Quality of Life Commission will be charged with finding other ways to reduce pollution by making environmentally friendly choices more affordable.</p>
 
              <h3>Corruption</h3>
 
               <h4>Make our system more democratic</h4>
-              <h5>(17.0_Democratise)</h4>
+              <h5>(17.0_Democratise)</h5>
 
               <p>Deliver integrity in politics, transparency and accountability in government and a stronger democracy, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations. My plan for this will later be published in detail, but the plan starts with supporting the movement for more independent politicians in this country. In the meantime, there are some reforms that ideally should be implemented immediately, even prior to the coming election in March 2026:</p>
               <ul>
@@ -362,31 +362,36 @@
               <p>The job of a politician in our lower house is to serve and represent their electorate. The most important aspect of this is to pursue and prioritise policies that align with the agenda of the electorate, and not to pursue any other agenda. None of our major political parties recognise this as the foundational principle of their constitution, and for at least the last 80 years or so, it seems that political parties have prevented the accountability of politicians to their electorate more than they have held politicians accountable. Getting more independents into parliament is the first step towards solving this problem, especially independents who are committed to their democratic duties to their electorate.</p>
 
               <h4>Keep South Australian land in South Australian hands</h4>
-              <h5>(18.0_Reclaim_Land)</h4>
+              <h5>(18.0_Reclaim_Land)</h5>
               
               <p>The largest ranch in the world, Anna Creek Station in South Australia, belongs to Gina Rinehart and a Chinese corporation. South Australian land and property should, by law, belong entirely to South Australian permanent residents, past permanent residents and soon-to-be permanent residents, except where it belongs to the federal government.</p>
 
               <h3>Public wellbeing</h3>
 
               <h4>Address the environmental causes of mental illness and violence</h4>
-              <h5>(19.0_Environmental_Health)</h5>
+              <h5>(19.1_Environmental_Health)</h5>
 
               <p>Fund science, science integrity and science communication when it comes to the environmental causes of mental illness and violence, and develop science-based policy to address the causes of mental illness and violence. The science on the causes of mental illness and violence is inadequate, and the good science that has been done has not been adequately communicated to the public, who are exposed to simplistic and incorrect narratives about the causes of mental illness and violence, some of which increase conflict and hatred and lead to more violence.</p>
 
               <h4>Prevent harm from advertising</h4>
-              <h5>(19.1_Prevent_Harm)</h4>
+              <h5>(19.2_Prevent_Harm)</h5>
 
               <p>Give both SA Health and the EPA the power to regulate against harmful advertising, such as gambling ads or alcohol ads, especially when children may be present, and to regulate product packaging to better inform consumers about products.</p>
 
               <h4>Free sport and healthy activity classes</h4>
-              <h5>(19.2_Free_Sport)</h4>
+              <h5>(19.3_Free_Sport)</h5>
 
               <p>Provide sporting clubs and similar clubs and health education services with the funding to provide South Australians with at least one free group lesson per year. The Quality of Life Commission will pay for this with measures such as Policy 3.0 above.</p>
 
               <h4>More diet soft drink than regular soft drink</h4>
-              <h5>(19.3_Sugary_Drinks)</h4>
+              <h5>(19.4_Sugary_Drinks)</h5>
 
               <p>Require all venues and vending machines selling soft drink to sell more diet soft drink options than regular soft drink options.</p>
+
+              <h3>Cruelty and violence</h3>
+              <h5>(12.0_Non-violence)</h5>
+
+              <p>I will always support measures to prevent cruelty and violence, and will look for areas where I can get support from other members of parliament. This includes cruelty and violence towards all animals.</p>
 
              </section>
 
