--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <p>There are two crucial components to my plan:</p>
             <ul>
              <li>Real policy solutions to all of the above, which are detailed below and will continue to be improved further over time, including through feedback from the electorate;</li>
-             <li>A viable and simple political strategy: draw positive attention to these policy ideas.</p>
+             <li>A viable and simple political strategy: draw positive attention to these policy ideas.</li>
             </ul>
             <p>We need to send a message to the federal and state government and the corporate political parties, and we need to create a new type of politics in Australia. To do that, we need to support a movement of candidates that demonstrate <em>through their own policies</em> that they are putting their electorate's goals ahead of their party's agenda or any other agenda, and that they have the necessary policy skills to contribute to solving our problems.</p>
             <p>Together we can send a message to the government that if they won't do their job, we'll elect someone who will. This will result in a government that tries much harder to solve our problems. It will also result in a government that has the necessary policy skills to do so.</p>
@@ -182,7 +182,7 @@
              <ul>
               <li>2.1 Regulate against corporations and landlords contributing to the quality of life crisis</li>
               <li>2.2 Charge those corporations and landlords for harmful, inflationary or otherwise costly behaviour</li>
-              <li>2.3 Spend this revenue on reducing the cost of living and improving quality of life further. Advocate for constitutional reform that will allow us to further improve this commission by allowing it to implement its own variable charges.</p>
+              <li>2.3 Spend this revenue on reducing the cost of living and improving quality of life further. Advocate for constitutional reform that will allow us to further improve this commission by allowing it to implement its own variable charges.</li>
              </ul>
              
              <p>The Quality of Life Commission will also have the mandate and resources necessary to investigate the government itself for inefficient spending such as private contractor rorts, and to close regulatory loopholes in any sector that is being taken advantage of by bad actors.</p>
@@ -389,7 +389,7 @@
               <p>Require all venues and vending machines selling soft drink to sell more diet soft drink options than regular soft drink options.</p>
 
               <h3>Cruelty and violence</h3>
-              <h5>(12.0_Non-violence)</h5>
+              <h5>(20.0_Non-violence)</h5>
 
               <p>I will always support measures to prevent cruelty and violence, and will look for areas where I can get support from other members of parliament. This includes cruelty and violence towards all animals.</p>
 
